# pyconfbox

./: README.md  README_ko.md  pyproject.toml
.github/: CONTRIBUTING.md  CONTRIBUTING_ko.md
.github/workflows/: build-and-publish.yml  test-publish.yml  test.yml
docs/: README.md
docs/en/: README.md
docs/ko/: README.md
src/pyconfbox/: __init__.py
src/pyconfbox/core/: config.py
tools/: build_all.py
