# PyConfBox Monorepo Configuration
# This file manages the development environment for the entire monorepo

[tool.uv.workspace]
members = [
    "packages/pyconfbox",
    "packages/pyconfbox-django",
    "packages/pyconfbox-mysql", 
    "packages/pyconfbox-postgresql",
    "packages/pyconfbox-mongodb"
]

[project]
name = "pyconfbox-monorepo"
version = "0.1.0"
description = "PyConfBox monorepo development environment"
authors = [
    { name = "Gabriel Ki", email = "edc1901@gmail.com" }
]
requires-python = ">=3.8"

# Development dependencies for the entire monorepo
dependencies = [
    "build>=1.0.0",
    "twine>=4.0.0",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
    "ruff>=0.8.0",
]

[dependency-groups]
dev = [
    "build>=1.0.0",
    "twine>=4.0.0", 
    "pytest>=8.3.5",
    "pytest-mock>=3.14.1",
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 88
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
